2011-06-20  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/base/configure.cfg,
	* config/devel/configure.cfg: Update to latest ISL and CLooG git
	versions.

2011-06-17  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* src/pocc.c: Fix incorrect scop free call.

2011-06-14  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-clastops.c: Fix a compilation warning.

	* src/options.h,
	* src/options.c: Provide option --ptile by default.

2011-06-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-codegen.c: Bypass Pluto's generated OpenMP
	clause when using PTile.

2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Add missing include.

2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/base/configure.cfg: Fix ISL and CLooG git version id.

2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Upgrade to PolyLib 5.22.5.

2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* bin/pocc-util.in,
	* bin/pocc-make: Improve upgrade mechanism.

	* config/devel/configure.cfg,
	* config/base/configure.cfg: Simplify PolyLib's bootstrap.

2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* driver/src/Makefile.am,
	* driver/pocc/Makefile.am: Add irconverter module as a default
	compiled module, upgrade to scoplib-0.2.1.

	* driver/pocc/driver-ptile.c: Move the core of the driver to the
	PTile module, where it belongs.

2011-06-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/driver.cfg,
	* config/base/configure.cfg: Upgrade to the latest version of
	CLooG and ISL, add irconverter module.